# simplex_solver

./: Cargo.toml  README.md
benches/: my_benchmark.rs
benches/data/: bigExample.json  smallExample.json
src/: lib.rs  main.rs
