[package]
name = "simplex_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32", features = ["serde-serialize"] }
criterion = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[[bench]]
name = "my_benchmark"
harness = false
